Add configuration for local dev env

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,17 @@
 /controller_tk3/target
+/controller_tk3/classes
+/controller_tk3/checkouts
+/controller_tk3/.lein-*
+/controller_tk3/.nrepl-port
 /webapp_tk3/target
-/classes
-/checkouts
+/webapp_tk3/classes
+/webapp_tk3/checkouts
+/webapp_tk3/.lein-*
+/webapp_tk3/.nrepl-port
 pom.xml
 pom.xml.asc
 *.jar
 *.class
-/.lein-*
-/.nrepl-port
 .hgignore
 .hg/
 .env
