Add common-tk3 app with k8s and unifn. Re-use it in webapp-tk and controller-tk3. Add mock endpoint in webapp

--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,19 @@
 /controller_tk3/checkouts
 /controller_tk3/.lein-*
 /controller_tk3/.nrepl-port
+/controller_tk3/pom.xml*
 /webapp_tk3/target
 /webapp_tk3/classes
 /webapp_tk3/checkouts
 /webapp_tk3/.lein-*
 /webapp_tk3/.nrepl-port
-pom.xml
-pom.xml.asc
+/webapp_tk3/pom.xml*
+/common_tk3/target
+/common_tk3/classes
+/common_tk3/checkouts
+/common_tk3/.lein-*
+/common_tk3/.nrepl-port
+/common_tk3/pom.xml*
 *.jar
 *.class
 .hgignore
