--- a/nginx-tk3/Dockerfile
+++ b/nginx-tk3/Dockerfile
@@ -2,4 +2,4 @@ FROM nginx:1.15.1
 
 COPY nginx.conf.template /etc/nginx/nginx.conf.template
 
-CMD /bin/bash -c "envsubst '${AIDBOX_BASE_DOMAIN}' < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
+CMD /bin/bash -c "envsubst '\${AIDBOX_BASE_DOMAIN}' < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
