--- a/nginx_tk3/Dockerfile
+++ b/nginx_tk3/Dockerfile
@@ -2,4 +2,7 @@ FROM nginx:1.15.1
 
 COPY nginx.conf.template /etc/nginx/nginx.conf.template
 
-CMD /bin/bash -c "envsubst '\${AIDBOX_BASE_DOMAIN}' < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod a+x /entrypoint.sh
+
+ENTRYPOINT /entrypoint.sh 
