--- a/nginx_tk3/nginx.conf.template
+++ b/nginx_tk3/nginx.conf.template
@@ -11,7 +11,7 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    resolver 10.96.0.10 valid=30s; 
+    resolver ${NAMESERVER} valid=30s; 
     
     # Retain the default nginx handling of requests without a "Connection" header
     map $http_upgrade $connection_upgrade {
