--- a/nginx_tk3/nginx.conf.template
+++ b/nginx_tk3/nginx.conf.template
@@ -51,6 +51,8 @@ http {
     server {
         server_name ~^(?<box>[^.]+)\.jupyter\.${AIDBOX_BASE_DOMAIN}$;
         location / {
+            add_header Strict-Transport-Security "max-age=0" always;
+
             proxy_pass http://jupyterinstance-$box.tk3.svc.cluster.local:8888;
             proxy_set_header Host                   $host;
 
@@ -63,7 +65,6 @@ http {
             # Allow websocket connections
             proxy_set_header                        Upgrade           $http_upgrade;
             proxy_set_header                        Connection        $connection_upgrade;
-            proxy_set_header                        Strict-Transport-Security max-age=0;
             proxy_set_header X-Real-IP              $the_real_ip;
 
             proxy_set_header X-Forwarded-For        $the_real_ip;
