--- a/nginx_tk3/nginx.conf.template
+++ b/nginx_tk3/nginx.conf.template
@@ -8,6 +8,7 @@ events {
 }
 
 http {
+    client_max_body_size 64m;
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
